# tui-diagramas

./: .gitignore  Cargo.toml  README.md  example.md  install  install-rust.sh  install.sh  mdtui.css  mdtui.py  mdtui_diagrams.py  requirements.txt  test.txt
docs/: welcome.md
docs/plans/: 2026-02-15-enhanced-file-explorer.md  2026-02-15-rust-rewrite.md  2026-02-15-ui-ux-improvements.md
src/: lib.rs  main.rs
src/editor/: buffer.rs  cursor.rs  mod.rs  syntax.rs
src/filesystem/: dir.rs  file.rs  mod.rs
src/git/: diff.rs  mod.rs  status.rs
src/preview/: code.rs  image.rs  markdown.rs  mod.rs  pdf.rs  text.rs
src/ui/: mod.rs
src/utils/: formatter.rs  mod.rs
